# .dotfiles

./: .bash_completion  .bashrc  .gitconfig  .vimrc  README.md
.config/alacritty/: alacritty.toml
.config/awesome/: rc.lua  theme.lua
.config/betterlockscreen/: betterlockscreenrc
.config/fish/: config.fish  fish_variables
.config/fish/conf.d/: colors.fish
.config/mpv/: input.conf  mpv.conf
.config/picom/: picom.conf
.config/rofi/: apprunner.rasi  apprunner.sh  config.rasi  powermenu.rasi  powermenu.sh
.docker/: config.json
.local/src/spotify-release-radar-save/: pyproject.toml  spotify-release-radar-save.py
.screenlayout/: lfil  lhome  lhome-double  lpetr  lremote  lwork  lwork2
